modules yajco-annotation-processor and yajco-annotation updated to use java 11, refactored annotation processor