@@ -1,17 +1,19 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>sk.tuke.yajco</groupId>
         <artifactId>yajco</artifactId>
         <version>0.5.10-SNAPSHOT</version>
     </parent>
+
     <groupId>sk.tuke.yajco</groupId>
     <artifactId>yajco-annotation-processor</artifactId>
     <version>0.5.10-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>yajco-annotation-processor</name>
-    
+
     <description>YAJCo - Yet Another Java Compiler Compiler - object oriented language specification - annotation processor</description>
     <licenses>
         <license>
@@ -37,22 +39,44 @@
         <connection>scm:svn:http://yajco.googlecode.com/svn/trunk/</connection>
         <developerConnection>scm:svn:https://yajco.googlecode.com/svn/trunk/yajco-annotation-processor/</developerConnection>
     </scm>
-    
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-  
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M2</version>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.1.0</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <release>11</release>
                     <proc>none</proc>
                 </configuration>
             </plugin>
+
             <!--            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.3</version>
@@ -78,17 +102,42 @@
                     </execution>
                 </executions>
             </plugin>-->
+
+            <!-- Runs unit tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+
+            <!-- Can be used in maven verify phase. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-    
+
     <dependencies>
-        <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.6.0</version>
-            <scope>system</scope>
-            <systemPath>${toolsjar}</systemPath>
-        </dependency>
         <!--        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>yajco-javacc-parser-generator-module</artifactId>
@@ -109,7 +158,7 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
-    
+
     <profiles>
         <profile>
             <id>default-profile</id>
